tests/baselines/reference/project/jsFileCompilationSameNameFilesNotSpecifiedWithAllowJs/node/jsFileCompilationSameNameFilesNotSpecifiedWithAllowJs.errors.txt
SameNameFilesNotSpecifiedWithAllowJs/tsconfig.json(1,3): error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.


==== SameNameFilesNotSpecifiedWithAllowJs/tsconfig.json (1 errors) ====
    { "compilerOptions": { "allowJs": true } }
      ~~~~~~~~~~~~~~~~~
!!! error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== SameNameFilesNotSpecifiedWithAllowJs/a.ts (0 errors) ====
    var test = 10;